--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
-<body>
+<body id="top">
     <a href="#main-content" class="skip-link">Skip to Main Content</a>
     <header>
         <h1>Floral Maison
