--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
-<body>
+<body id="top">
     <a href="#main-content" class="skip-link">Skip to Main Content</a>
     <header>
         <h1>
@@ -37,7 +37,7 @@
         </p>
         <p>“Fresh flowers delivered with love. From roses to lilies, we bring nature’s beauty to your special moments.”</p>
         <div class="carousel">
-            <button class="prev" onclick="moveslide(-1)"></button>
+            <button class="prev" onclick="moveslide(-1)" aria-label="Previous Slide">Prev</button>
             <div class="slides">
                 <img src="images/aqua.jpg" alt="Flowerone">
                 <img src="images/boque.jpeg" alt="Flowertwo">
@@ -47,7 +47,7 @@
                 <img src="images/purpletulip.webp" alt="Flowersix">
                 <img src="images/sunbrdy.jpg" alt="flowersvn">
             </div>
-            <button class="next" onclick="moveslide(1)"></button>
+            <button class="next" onclick="moveslide(1)" aria-label="Next slide">Next</button>
         </div>
     </div>
     </main>
