--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <i class="fa-solid fa-spa fa-2x"></i></h1>
         <nav class="navbar">
             <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="hamburger">
+            <label for="menu-toggle" class="hamburger" aria-label="toggle navigation menu">
                 <span></span>
                 <span></span>
                 <span></span>
