--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </h1>
         <nav class="navbar">
             <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="hamburger">
+            <label for="menu-toggle" class="hamburger" aria-label="toggle navigation menu">
                 <span></span>
                 <span></span>
                 <span></span>
